--- a/spec/fixtures/vcr_cassettes/chat_function_calling_ollama_llama3_1_8b_can_use_tools_without_parameters.yml
+++ b/spec/fixtures/vcr_cassettes/chat_function_calling_ollama_llama3_1_8b_can_use_tools_without_parameters.yml
@@ -23,17 +23,17 @@ http_interactions:
       message: OK
     headers:
       Content-Length:
-      - '371'
+      - '372'
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Fri, 11 Apr 2025 20:25:25 GMT
+      - Thu, 17 Apr 2025 13:50:57 GMT
       Server:
       - Caddy
     body:
       encoding: UTF-8
-      string: '{"model":"llama3.1:8b","created_at":"2025-04-11T20:25:25.67535401Z","message":{"role":"assistant","content":"","tool_calls":[{"function":{"name":"best_language_to_learn","arguments":{}}}]},"done_reason":"stop","done":true,"total_duration":185702096,"load_duration":14581802,"prompt_eval_count":155,"prompt_eval_duration":8341714,"eval_count":15,"eval_duration":162455790}'
-  recorded_at: Fri, 11 Apr 2025 20:25:22 GMT
+      string: '{"model":"llama3.1:8b","created_at":"2025-04-17T13:50:57.548572396Z","message":{"role":"assistant","content":"","tool_calls":[{"function":{"name":"best_language_to_learn","arguments":{}}}]},"done_reason":"stop","done":true,"total_duration":182779672,"load_duration":14595985,"prompt_eval_count":155,"prompt_eval_duration":7843717,"eval_count":15,"eval_duration":159900899}'
+  recorded_at: Thu, 17 Apr 2025 13:50:50 GMT
 - request:
     method: post
     uri: http://localhost:11434/api/chat
@@ -59,25 +59,20 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Fri, 11 Apr 2025 20:25:27 GMT
+      - Thu, 17 Apr 2025 13:50:58 GMT
       Server:
       - Caddy
       Vary:
       - Accept-Encoding
       Content-Length:
-      - '1043'
+      - '626'
     body:
       encoding: ASCII-8BIT
-      string: '{"model":"llama3.1:8b","created_at":"2025-04-11T20:25:27.098095205Z","message":{"role":"assistant","content":"The
-        output suggests that Ruby is one of the top languages recommended for learning,
-        but it doesn''t provide an exhaustive list. \n\nHere are some other top programming
-        languages that are commonly used and in-demand:\n1. Python: Known for its
-        simplicity, versatility, and large community.\n2. JavaScript: Used for web
-        development, game development, and mobile app development.\n3. Java: A popular
-        language for Android app development, web development, and enterprise software
-        development.\n4. C++: A high-performance language used in systems programming,
-        game development, and other applications that require direct hardware manipulation.\n\nThe
-        best language to learn depends on your goals, interests, and the type of projects
-        you want to work on."},"done_reason":"stop","done":true,"total_duration":1418644485,"load_duration":15145034,"prompt_eval_count":77,"prompt_eval_duration":4868578,"eval_count":142,"eval_duration":1398040040}'
-  recorded_at: Fri, 11 Apr 2025 20:25:23 GMT
+      string: '{"model":"llama3.1:8b","created_at":"2025-04-17T13:50:58.142764068Z","message":{"role":"assistant","content":"The
+        tool suggests that Ruby is often considered one of the most versatile and
+        easy-to-learn programming languages, making it an excellent choice for beginners.
+        Its simplicity and readability make it a great language for those new to programming,
+        while its power and flexibility also make it suitable for more experienced
+        developers."},"done_reason":"stop","done":true,"total_duration":590720997,"load_duration":18387094,"prompt_eval_count":77,"prompt_eval_duration":4375877,"eval_count":59,"eval_duration":567375704}'
+  recorded_at: Thu, 17 Apr 2025 13:50:50 GMT
 recorded_with: VCR 6.3.1
