--- a/spec/fixtures/vcr_cassettes/chat_vision_models_ollama_granite3_2-vision_2b_can_understand_images.yml
+++ b/spec/fixtures/vcr_cassettes/chat_vision_models_ollama_granite3_2-vision_2b_can_understand_images.yml
@@ -22,18 +22,17 @@ http_interactions:
       message: OK
     headers:
       Content-Length:
-      - '484'
+      - '420'
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Fri, 11 Apr 2025 20:24:03 GMT
+      - Thu, 17 Apr 2025 13:20:13 GMT
       Server:
       - Caddy
     body:
       encoding: UTF-8
-      string: '{"model":"granite3.2-vision:2b","created_at":"2025-04-11T20:24:03.122857934Z","message":{"role":"assistant","content":"\nI''m
-        unable to view or analyze images. My capabilities are limited to text-based
-        interactions. If you have any questions or need assistance with something
-        else, feel free to ask!"},"done_reason":"stop","done":true,"total_duration":292340255,"load_duration":9777040,"prompt_eval_count":2242,"prompt_eval_duration":23093714,"eval_count":38,"eval_duration":258539543}'
-  recorded_at: Fri, 11 Apr 2025 20:23:59 GMT
+      string: '{"model":"granite3.2-vision:2b","created_at":"2025-04-17T13:20:13.293348596Z","message":{"role":"assistant","content":"\nI
+        see a diamond-shaped object with a red hue, possibly representing a piece
+        of jewelry or a decorative item."},"done_reason":"stop","done":true,"total_duration":5054099789,"load_duration":3935971594,"prompt_eval_count":2242,"prompt_eval_duration":915538125,"eval_count":31,"eval_duration":199258627}'
+  recorded_at: Thu, 17 Apr 2025 13:20:05 GMT
 recorded_with: VCR 6.3.1
