docs: add documentation for structured output feature

--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -19,6 +19,8 @@
       url: /guides/image-generation
     - title: Embeddings
       url: /guides/embeddings
+    - title: Structured Output
+      url: /guides/structured-output
     - title: Error Handling
       url: /guides/error-handling
     - title: Models
