--- a/spec/fixtures/vcr_cassettes/chat_streaming_responses_mistral_mistral-small-latest_supports_streaming_responses.yml
+++ b/spec/fixtures/vcr_cassettes/chat_streaming_responses_mistral_mistral-small-latest_supports_streaming_responses.yml
@@ -12,51 +12,53 @@ http_interactions:
       - Faraday v2.12.2
       Authorization:
       - Bearer <MISTRAL_API_KEY>
+      Accept:
+      - text/event-stream
+      Cache-Control:
+      - no-cache
       Content-Type:
       - application/json
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
   response:
     status:
       code: 200
       message: OK
     headers:
       Date:
-      - Sun, 27 Apr 2025 20:02:18 GMT
+      - Mon, 05 May 2025 20:08:32 GMT
       Content-Type:
       - text/event-stream; charset=utf-8
       Transfer-Encoding:
       - chunked
       Connection:
       - keep-alive
-      X-Ratelimitbysize-Limit-Minute:
-      - '2000000'
       X-Ratelimitbysize-Remaining-Minute:
-      - '1901054'
+      - '1967993'
       X-Ratelimitbysize-Remaining-Month:
-      - '9992710733'
-      Ratelimitbysize-Reset:
-      - '42'
-      Ratelimitbysize-Remaining:
-      - '1901054'
-      Ratelimitbysize-Limit:
-      - '2000000'
-      X-Ratelimitbysize-Limit-Month:
-      - '10000000000'
+      - '9997006588'
       Ratelimitbysize-Query-Cost:
       - '32007'
+      Ratelimitbysize-Limit:
+      - '2000000'
+      Ratelimitbysize-Remaining:
+      - '1967993'
+      X-Ratelimitbysize-Limit-Month:
+      - '10000000000'
+      Ratelimitbysize-Reset:
+      - '29'
+      X-Ratelimitbysize-Limit-Minute:
+      - '2000000'
       X-Envoy-Upstream-Service-Time:
-      - '55'
+      - '60'
       Access-Control-Allow-Origin:
       - "*"
       X-Kong-Upstream-Latency:
-      - '55'
+      - '62'
       X-Kong-Proxy-Latency:
-      - '12'
+      - '7'
       X-Kong-Request-Id:
-      - '008eb067b062215cc9efe06abbd1cb66'
+      - b7f66e1e86bb5d0ebd011f011370fd1e
       Cf-Cache-Status:
       - DYNAMIC
       Set-Cookie:
@@ -71,48 +73,48 @@ http_interactions:
     body:
       encoding: UTF-8
       string: |+
-        data: {"id":"8aa694c3d83f4b978a54c7e2f48aa43a","object":"chat.completion.chunk","created":1745784138,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"role":"assistant","content":""},"finish_reason":null,"logprobs":null}]}
+        data: {"id":"b22da42f5e794e53bb993d9494b95233","object":"chat.completion.chunk","created":1746475712,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"role":"assistant","content":""},"finish_reason":null,"logprobs":null}]}
 
-        data: {"id":"8aa694c3d83f4b978a54c7e2f48aa43a","object":"chat.completion.chunk","created":1745784138,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":"Sure"},"finish_reason":null,"logprobs":null}]}
+        data: {"id":"b22da42f5e794e53bb993d9494b95233","object":"chat.completion.chunk","created":1746475712,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":"Sure"},"finish_reason":null,"logprobs":null}]}
 
-        data: {"id":"8aa694c3d83f4b978a54c7e2f48aa43a","object":"chat.completion.chunk","created":1745784138,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":","},"finish_reason":null,"logprobs":null}]}
+        data: {"id":"b22da42f5e794e53bb993d9494b95233","object":"chat.completion.chunk","created":1746475712,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":","},"finish_reason":null,"logprobs":null}]}
 
-        data: {"id":"8aa694c3d83f4b978a54c7e2f48aa43a","object":"chat.completion.chunk","created":1745784138,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":" here"},"finish_reason":null,"logprobs":null}]}
+        data: {"id":"b22da42f5e794e53bb993d9494b95233","object":"chat.completion.chunk","created":1746475712,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":" here"},"finish_reason":null,"logprobs":null}]}
 
-        data: {"id":"8aa694c3d83f4b978a54c7e2f48aa43a","object":"chat.completion.chunk","created":1745784138,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":" is"},"finish_reason":null,"logprobs":null}]}
+        data: {"id":"b22da42f5e794e53bb993d9494b95233","object":"chat.completion.chunk","created":1746475712,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":" is"},"finish_reason":null,"logprobs":null}]}
 
-        data: {"id":"8aa694c3d83f4b978a54c7e2f48aa43a","object":"chat.completion.chunk","created":1745784138,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":" the"},"finish_reason":null,"logprobs":null}]}
+        data: {"id":"b22da42f5e794e53bb993d9494b95233","object":"chat.completion.chunk","created":1746475712,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":" the"},"finish_reason":null,"logprobs":null}]}
 
-        data: {"id":"8aa694c3d83f4b978a54c7e2f48aa43a","object":"chat.completion.chunk","created":1745784138,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":" count"},"finish_reason":null,"logprobs":null}]}
+        data: {"id":"b22da42f5e794e53bb993d9494b95233","object":"chat.completion.chunk","created":1746475712,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":" count"},"finish_reason":null,"logprobs":null}]}
 
-        data: {"id":"8aa694c3d83f4b978a54c7e2f48aa43a","object":"chat.completion.chunk","created":1745784138,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":" from"},"finish_reason":null,"logprobs":null}]}
+        data: {"id":"b22da42f5e794e53bb993d9494b95233","object":"chat.completion.chunk","created":1746475712,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":" from"},"finish_reason":null,"logprobs":null}]}
 
-        data: {"id":"8aa694c3d83f4b978a54c7e2f48aa43a","object":"chat.completion.chunk","created":1745784138,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":" "},"finish_reason":null,"logprobs":null}]}
+        data: {"id":"b22da42f5e794e53bb993d9494b95233","object":"chat.completion.chunk","created":1746475712,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":" "},"finish_reason":null,"logprobs":null}]}
 
-        data: {"id":"8aa694c3d83f4b978a54c7e2f48aa43a","object":"chat.completion.chunk","created":1745784138,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":"1"},"finish_reason":null,"logprobs":null}]}
+        data: {"id":"b22da42f5e794e53bb993d9494b95233","object":"chat.completion.chunk","created":1746475712,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":"1"},"finish_reason":null,"logprobs":null}]}
 
-        data: {"id":"8aa694c3d83f4b978a54c7e2f48aa43a","object":"chat.completion.chunk","created":1745784138,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":" to"},"finish_reason":null,"logprobs":null}]}
+        data: {"id":"b22da42f5e794e53bb993d9494b95233","object":"chat.completion.chunk","created":1746475712,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":" to"},"finish_reason":null,"logprobs":null}]}
 
-        data: {"id":"8aa694c3d83f4b978a54c7e2f48aa43a","object":"chat.completion.chunk","created":1745784138,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":" "},"finish_reason":null,"logprobs":null}]}
+        data: {"id":"b22da42f5e794e53bb993d9494b95233","object":"chat.completion.chunk","created":1746475712,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":" "},"finish_reason":null,"logprobs":null}]}
 
-        data: {"id":"8aa694c3d83f4b978a54c7e2f48aa43a","object":"chat.completion.chunk","created":1745784138,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":"3"},"finish_reason":null,"logprobs":null}]}
+        data: {"id":"b22da42f5e794e53bb993d9494b95233","object":"chat.completion.chunk","created":1746475712,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":"3"},"finish_reason":null,"logprobs":null}]}
 
-        data: {"id":"8aa694c3d83f4b978a54c7e2f48aa43a","object":"chat.completion.chunk","created":1745784138,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":":\n\n"},"finish_reason":null,"logprobs":null}]}
+        data: {"id":"b22da42f5e794e53bb993d9494b95233","object":"chat.completion.chunk","created":1746475712,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":":\n\n"},"finish_reason":null,"logprobs":null}]}
 
-        data: {"id":"8aa694c3d83f4b978a54c7e2f48aa43a","object":"chat.completion.chunk","created":1745784138,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":"1"},"finish_reason":null,"logprobs":null}]}
+        data: {"id":"b22da42f5e794e53bb993d9494b95233","object":"chat.completion.chunk","created":1746475712,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":"1"},"finish_reason":null,"logprobs":null}]}
 
-        data: {"id":"8aa694c3d83f4b978a54c7e2f48aa43a","object":"chat.completion.chunk","created":1745784138,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":"\n"},"finish_reason":null,"logprobs":null}]}
+        data: {"id":"b22da42f5e794e53bb993d9494b95233","object":"chat.completion.chunk","created":1746475712,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":"\n"},"finish_reason":null,"logprobs":null}]}
 
-        data: {"id":"8aa694c3d83f4b978a54c7e2f48aa43a","object":"chat.completion.chunk","created":1745784138,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":"2"},"finish_reason":null,"logprobs":null}]}
+        data: {"id":"b22da42f5e794e53bb993d9494b95233","object":"chat.completion.chunk","created":1746475712,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":"2"},"finish_reason":null,"logprobs":null}]}
 
-        data: {"id":"8aa694c3d83f4b978a54c7e2f48aa43a","object":"chat.completion.chunk","created":1745784138,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":"\n"},"finish_reason":null,"logprobs":null}]}
+        data: {"id":"b22da42f5e794e53bb993d9494b95233","object":"chat.completion.chunk","created":1746475712,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":"\n"},"finish_reason":null,"logprobs":null}]}
 
-        data: {"id":"8aa694c3d83f4b978a54c7e2f48aa43a","object":"chat.completion.chunk","created":1745784138,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":"3"},"finish_reason":null,"logprobs":null}]}
+        data: {"id":"b22da42f5e794e53bb993d9494b95233","object":"chat.completion.chunk","created":1746475712,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":"3"},"finish_reason":null,"logprobs":null}]}
 
-        data: {"id":"8aa694c3d83f4b978a54c7e2f48aa43a","object":"chat.completion.chunk","created":1745784138,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":""},"finish_reason":"stop","logprobs":null}],"usage":{"prompt_tokens":10,"total_tokens":29,"completion_tokens":19}}
+        data: {"id":"b22da42f5e794e53bb993d9494b95233","object":"chat.completion.chunk","created":1746475712,"model":"mistral-small-latest","choices":[{"index":0,"delta":{"content":""},"finish_reason":"stop","logprobs":null}],"usage":{"prompt_tokens":10,"total_tokens":29,"completion_tokens":19}}
 
         data: [DONE]
 
-  recorded_at: Sun, 27 Apr 2025 20:02:18 GMT
+  recorded_at: Mon, 05 May 2025 20:08:32 GMT
 recorded_with: VCR 6.3.1
 ...
