Update cicd.yml to install faraday version correctly

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -62,7 +62,7 @@ jobs:
         fail_ci_if_error: false
 
     - name: Run the test suite with lower Faraday versions
-      run: FARADAY_VERSION=1.10.3 bundle exec rspec
+      run: FARADAY_VERSION=1.10.3 bundle install && bundle exec rspec
       env:
         OLLAMA_API_BASE: http://localhost:11434/v1 # dummy
 
