--- a/spec/fixtures/vcr_cassettes/chat_text_models_ollama_qwen3_can_understand_text.yml
+++ b/spec/fixtures/vcr_cassettes/chat_text_models_ollama_qwen3_can_understand_text.yml
@@ -124,4 +124,143 @@ http_interactions:
 
         '
   recorded_at: Wed, 11 Jun 2025 12:42:57 GMT
+- request:
+    method: post
+    uri: "<OLLAMA_API_BASE>chat/completions"
+    body:
+      encoding: UTF-8
+      string: '{"model":"qwen3","messages":[{"role":"user","content":[{"type":"text","text":"What''s
+        in this file?"},{"type":"text","text":"<file name=''ruby.txt'' mime_type=''text/plain''>Ruby
+        is the best.</file>"}]}],"stream":false,"temperature":0.7}'
+    headers:
+      User-Agent:
+      - Faraday v2.13.1
+      Content-Type:
+      - application/json
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/json
+      Date:
+      - Sun, 15 Jun 2025 20:15:02 GMT
+      Content-Length:
+      - '1995'
+    body:
+      encoding: UTF-8
+      string: '{"id":"chatcmpl-690","object":"chat.completion","created":1750018502,"model":"qwen3","system_fingerprint":"fp_ollama","choices":[{"index":0,"message":{"role":"assistant","content":"\u003cthink\u003e\nOkay,
+        let me try to figure out what''s in this file. The user provided a file named
+        ''ruby.txt'' with a MIME type of text/plain. The content is just one line:
+        \"Ruby is the best.\" \n\nFirst, I should confirm that the MIME type is correct.
+        Text/plain means it''s a plain text file, so there''s no formatting or special
+        characters to worry about. The content itself is straightforward. The line
+        \"Ruby is the best.\" seems like a simple statement. \n\nI wonder if there''s
+        any hidden meaning or if the user is testing something. Maybe they want to
+        know if the file contains any specific information beyond the obvious. Since
+        it''s just a single line, there''s not much else to analyze. \n\nI should
+        also consider if there''s any context missing. The user might be referring
+        to Ruby programming language, but the file content doesn''t mention code.
+        It''s just a sentence. Maybe they''re checking if the file is correctly formatted
+        or if there are any hidden characters. \n\nAnother angle: sometimes files
+        have metadata or other hidden data, but since the MIME type is text/plain
+        and the content is as given, there''s no indication of that here. The user
+        might be confirming the file''s content or looking for a specific answer.
+        \n\nIn any case, the answer should state that the file contains the text \"Ruby
+        is the best.\" and confirm the MIME type. No need to overcomplicate it unless
+        there''s more context, which there isn''t. So the response is straightforward.\n\u003c/think\u003e\n\nThe
+        file `ruby.txt` contains the text:  \n**\"Ruby is the best.\"**  \n\nIt is
+        a plain text file (MIME type `text/plain`), so there are no formatting, encoding,
+        or hidden data complexities. The content is a simple statement."},"finish_reason":"stop"}],"usage":{"prompt_tokens":34,"completion_tokens":367,"total_tokens":401}}
+
+        '
+  recorded_at: Sun, 15 Jun 2025 20:15:02 GMT
+- request:
+    method: post
+    uri: "<OLLAMA_API_BASE>chat/completions"
+    body:
+      encoding: UTF-8
+      string: '{"model":"qwen3","messages":[{"role":"user","content":[{"type":"text","text":"What''s
+        in this file?"},{"type":"text","text":"<file name=''ruby.txt'' mime_type=''text/plain''>Ruby
+        is the best.</file>"}]},{"role":"assistant","content":"<think>\nOkay, let
+        me try to figure out what''s in this file. The user provided a file named
+        ''ruby.txt'' with a MIME type of text/plain. The content is just one line:
+        \"Ruby is the best.\" \n\nFirst, I should confirm that the MIME type is correct.
+        Text/plain means it''s a plain text file, so there''s no formatting or special
+        characters to worry about. The content itself is straightforward. The line
+        \"Ruby is the best.\" seems like a simple statement. \n\nI wonder if there''s
+        any hidden meaning or if the user is testing something. Maybe they want to
+        know if the file contains any specific information beyond the obvious. Since
+        it''s just a single line, there''s not much else to analyze. \n\nI should
+        also consider if there''s any context missing. The user might be referring
+        to Ruby programming language, but the file content doesn''t mention code.
+        It''s just a sentence. Maybe they''re checking if the file is correctly formatted
+        or if there are any hidden characters. \n\nAnother angle: sometimes files
+        have metadata or other hidden data, but since the MIME type is text/plain
+        and the content is as given, there''s no indication of that here. The user
+        might be confirming the file''s content or looking for a specific answer.
+        \n\nIn any case, the answer should state that the file contains the text \"Ruby
+        is the best.\" and confirm the MIME type. No need to overcomplicate it unless
+        there''s more context, which there isn''t. So the response is straightforward.\n</think>\n\nThe
+        file `ruby.txt` contains the text:  \n**\"Ruby is the best.\"**  \n\nIt is
+        a plain text file (MIME type `text/plain`), so there are no formatting, encoding,
+        or hidden data complexities. The content is a simple statement."},{"role":"user","content":[{"type":"text","text":"and
+        in this one?"},{"type":"text","text":"<file name=''ruby.xml'' mime_type=''application/xml''><truism>Ruby
+        is the best</truism></file>"}]}],"stream":false,"temperature":0.7}'
+    headers:
+      User-Agent:
+      - Faraday v2.13.1
+      Content-Type:
+      - application/json
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/json
+      Date:
+      - Sun, 15 Jun 2025 20:15:14 GMT
+      Transfer-Encoding:
+      - chunked
+    body:
+      encoding: UTF-8
+      string: '{"id":"chatcmpl-856","object":"chat.completion","created":1750018514,"model":"qwen3","system_fingerprint":"fp_ollama","choices":[{"index":0,"message":{"role":"assistant","content":"\u003cthink\u003e\nOkay,
+        let''s see. The user asked about the contents of two files: ruby.txt and ruby.xml.
+        The first one was straightforward text, just \"Ruby is the best.\" Now they''re
+        asking about ruby.xml, which has an XML structure with a \u003ctruism\u003e
+        tag.\n\nI need to explain what''s in the XML file. The user might be checking
+        if there''s any hidden data or if the XML is well-formed. They might also
+        be testing if I can recognize XML tags and their purpose. Since the MIME type
+        is application/xml, the content is XML, so I should mention that. The \u003ctruism\u003e
+        tag isn''t a standard XML tag, so maybe it''s a custom element. The content
+        is the same as before, \"Ruby is the best,\" but enclosed in the tag. I should
+        note that the XML is valid, even though the tag isn''t standard, and that
+        the content is the same statement. Also, maybe the user is interested in whether
+        there''s any additional data or if it''s just the same text in a different
+        format. I should make sure to highlight the structure and the content clearly,
+        and perhaps mention that the XML is simple but uses a non-standard element.
+        Also, check if there''s any encoding or other XML specifics, but since the
+        file is short, it''s probably just the tag and the text. Make sure the answer
+        is clear and addresses both the structure and the content.\n\u003c/think\u003e\n\nThe
+        file `ruby.xml` contains the following XML content:  \n```xml\n\u003ctruism\u003eRuby
+        is the best\u003c/truism\u003e\n```\n\n### Key details:\n- **MIME type**:
+        `application/xml` (indicating it''s an XML file).\n- **Structure**: The content
+        is wrapped in a `\u003ctruism\u003e` tag, which is a custom or non-standard
+        XML element (not part of the official XML specification).\n- **Content**:
+        The text **\"Ruby is the best\"** is the same as in `ruby.txt`, but enclosed
+        in the `\u003ctruism\u003e` tag.\n\nThis file is a simple XML document with
+        no additional metadata or formatting."},"finish_reason":"stop"}],"usage":{"prompt_tokens":130,"completion_tokens":427,"total_tokens":557}}
+
+        '
+  recorded_at: Sun, 15 Jun 2025 20:15:14 GMT
 recorded_with: VCR 6.3.1
