--- a/spec/fixtures/vcr_cassettes/chat_with_params_openai_gpt-4_1-nano_supports_response_format_param.yml
+++ b/spec/fixtures/vcr_cassettes/chat_with_params_openai_gpt-4_1-nano_supports_response_format_param.yml
@@ -24,7 +24,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Thu, 03 Jul 2025 01:20:59 GMT
+      - Sat, 19 Jul 2025 19:53:31 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -36,11 +36,13 @@ http_interactions:
       Openai-Organization:
       - "<OPENAI_ORGANIZATION>"
       Openai-Processing-Ms:
-      - '160'
+      - '148'
+      Openai-Project:
+      - proj_Cgr91oaB3FCyMSthpusv7eJc
       Openai-Version:
       - '2020-10-01'
       X-Envoy-Upstream-Service-Time:
-      - '162'
+      - '150'
       X-Ratelimit-Limit-Requests:
       - '500'
       X-Ratelimit-Limit-Tokens:
@@ -74,9 +76,9 @@ http_interactions:
       encoding: ASCII-8BIT
       string: |
         {
-          "id": "chatcmpl-Bp2vDJ6we2xCrUhBondp1eCMg6VAE",
+          "id": "chatcmpl-Bv7ud7hg2U3FxalKcWA4qjZTTRsfk",
           "object": "chat.completion",
-          "created": 1751505659,
+          "created": 1752954811,
           "model": "gpt-4.1-nano-2025-04-14",
           "choices": [
             {
@@ -107,7 +109,7 @@ http_interactions:
             }
           },
           "service_tier": "default",
-          "system_fingerprint": "fp_38343a2f8f"
+          "system_fingerprint": null
         }
-  recorded_at: Thu, 03 Jul 2025 01:20:59 GMT
+  recorded_at: Sat, 19 Jul 2025 19:53:31 GMT
 recorded_with: VCR 6.3.1
