--- a/.gitignore
+++ b/.gitignore
@@ -56,4 +56,5 @@ Gemfile.lock
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 # .rubocop-https?--*
 
-repomix-output.*
+CLAUDE.md
+.claude
