Move available models guide to top-level navigation
Promoted the available models documentation from guides subfolder to
top-level navigation after ecosystem section for better visibility.

--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -27,10 +27,10 @@
       url: /guides/models
     - title: Async
       url: /guides/async
-    - title: Available Models
-      url: /guides/available-models
 - title: Ecosystem
   url: /ecosystem
+- title: Available Models
+  url: /available-models
 - title: GitHub
   url: https://github.com/crmne/ruby_llm
 - title: Blog
