Fix Rails generator migration order and PostgreSQL detection Fixes #310, #311

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,3 +21,7 @@ Metrics/MethodLength:
   Enabled: false
 Metrics/ModuleLength:
   Enabled: false
+RSpec/ExampleLength:
+  Enabled: false
+RSpec/MultipleExpectations:
+  Enabled: false
