Disable StringInclude cop in capabilities
`String#include?` is considerably more efficient than `String#match?`.

However, for uniformity and future-proofing with minimal modifications,
it is preferable to permit that comparison in capabilities detection.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -25,6 +25,9 @@ Metrics/ModuleLength:
 Performance/CollectionLiteralInLoop:
   Exclude:
     - spec/**/*
+Performance/StringInclude:
+  Exclude:
+    - lib/ruby_llm/providers/**/capabilities.rb
 RSpec/ExampleLength:
   Enabled: false
 RSpec/MultipleExpectations:
