Disable Performance/RedundantBlockCall cop
Implementing a comprehensive fix for this issue may be regarded as a
disruptive change due to its impact on the API.

Specifically, a partial solution will introduce
`Lint/UnusedMethodArgument` violations, which can be disregarded.

However, benchmarking indicates that removing the `&block` argument
from the method signature will result a performance improvement:

```
ruby 3.4.5 (2025-07-16 revision 20cda200d3) +PRISM [arm64-darwin24]

Comparison (IPS):
     yield (no args): 10747202.2 i/s
  yield (&block arg):  9308969.9 i/s - 1.15x  (± 0.00) slower
          block.call:  8607805.1 i/s - 1.25x  (± 0.00) slower
```

Ref:
- https://github.com/fastruby/fast-ruby?tab=readme-ov-file#proccall-and-block-arguments-vs-yield-code

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -25,6 +25,8 @@ Metrics/ModuleLength:
 Performance/CollectionLiteralInLoop:
   Exclude:
     - spec/**/*
+Performance/RedundantBlockCall:
+  Enabled: false # TODO: temporarily disabled to avoid potential breaking change
 Performance/StringInclude:
   Exclude:
     - lib/ruby_llm/providers/**/capabilities.rb
