--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -24,6 +24,11 @@ PreCommit:
     targets: ['models:update', 'models:docs', 'aliases:generate']
     on_warn: fail
 
+  AppraisalGenerate:
+    enabled: true
+    description: 'Generate appraisal gemfiles'
+    command: ['bundle', 'exec', 'appraisal', 'generate']
+
 PostCheckout:
   ALL: # Special hook name that customizes all hooks of this type
     quiet: true # Change all post-checkout hooks to only display output on failure
